<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

    </data>
    <androidx.cardview.widget.CardView
        android:id="@+id/movieItem_cardView"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:layout_marginStart="@dimen/medium_gap"
        android:layout_marginTop="@dimen/small_gap"
        android:layout_marginEnd="@dimen/medium_gap"
        android:layout_marginBottom="@dimen/small_gap"
        android:backgroundTint="@color/cardLayout"
        app:cardCornerRadius="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/movie_ImageView"
                android:layout_width="@dimen/image_width"
                android:layout_height="@dimen/image_height"
                android:layout_marginStart="@dimen/small_gap"
                android:layout_marginTop="@dimen/medium_gap"
                android:layout_marginBottom="@dimen/medium_gap"
                android:adjustViewBounds="true"
                android:contentDescription="@string/starwars_contentDesc"
                android:scaleType="centerCrop"
                android:src="@drawable/empty"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/movie_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/movie_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="9dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="@dimen/small_gap"
                android:text="@string/starwars_text"
                android:textColor="@color/white"
                android:textSize="@dimen/MovieTitle_Size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/movie_ImageView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/movie_rating"
                style="@style/TextAppearance.Material3.HeadlineSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/starwars_rating_text"
                android:textColor="@color/calification"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/movie_title"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/movie_title"
                app:layout_constraintTop_toBottomOf="@+id/movie_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</layout>