<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundLayout"
    tools:context=".ui.movie.NewMovieFragment">

    <TextView
        android:id="@+id/billBoard_TextView"
        style="@style/TextAppearance.MaterialComponents.Headline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/new_movie_Text"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/name_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_gap"
        android:layout_marginTop="@dimen/medium_gap"
        android:layout_marginEnd="@dimen/medium_gap"
        android:ems="10"
        android:hint="@string/name_Movie"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/category_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/billBoard_TextView"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardLayout" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/category_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_gap"
        android:layout_marginTop="@dimen/medium_gap"
        android:layout_marginEnd="@dimen/medium_gap"
        android:ems="10"
        android:hint="@string/category_Movie"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/description_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_editText">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardLayout" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_gap"
        android:layout_marginTop="@dimen/medium_gap"
        android:layout_marginEnd="@dimen/medium_gap"
        android:ems="10"
        android:hint="@string/description_Movie"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/calification_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category_editText">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardLayout" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/calification_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_gap"
        android:layout_marginTop="@dimen/medium_gap"
        android:layout_marginEnd="@dimen/medium_gap"
        android:ems="10"
        android:hint="@string/calification_Movie"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/submit_Action"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_editText">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardLayout" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/submit_Action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_gap"
        android:backgroundTint="@color/buttonColor"
        android:text="SUBMIT"
        app:cornerRadius="@dimen/small_gap"
        app:layout_constraintEnd_toEndOf="@+id/calification_editText"
        app:layout_constraintStart_toStartOf="@+id/calification_editText"
        app:layout_constraintTop_toBottomOf="@+id/calification_editText" />
</androidx.constraintlayout.widget.ConstraintLayout>