<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.rmarenco.laboratorio05.ui.movie.MovieViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundLayout"
        tools:context=".ui.movie.BillBoardFragment">

        <TextView
            android:id="@+id/billBoard_TextView"
            style="@style/TextAppearance.MaterialComponents.Headline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="@dimen/medium_gap"
            android:text="@string/billboard_text"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/movie1_cardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/movie1_cardView"
            android:layout_width="0dp"
            android:layout_height="125dp"
            android:layout_marginStart="@dimen/medium_gap"
            android:layout_marginTop="@dimen/small_gap"
            android:layout_marginEnd="@dimen/medium_gap"
            android:layout_marginBottom="@dimen/small_gap"
            android:backgroundTint="@color/cardLayout"
            app:cardCornerRadius="8dp"
            app:layout_constraintBottom_toTopOf="@+id/movie2_cardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/billBoard_TextView"
            app:layout_constraintVertical_chainStyle="packed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/starwars_imageView"
                    android:layout_width="@dimen/image_width"
                    android:layout_height="@dimen/image_height"
                    android:layout_marginStart="@dimen/small_gap"
                    android:layout_marginTop="@dimen/medium_gap"
                    android:layout_marginBottom="@dimen/medium_gap"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/starwars_contentDesc"
                    android:scaleType="centerCrop"
                    android:src="@drawable/star_wars"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/movie_starwars"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/movie_starwars"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="@dimen/small_gap"
                    android:text="@string/starwars_text"
                    android:textColor="@color/white"
                    android:textSize="@dimen/MovieTitle_Size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/starwars_imageView"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/starwars_rating"
                    style="@style/TextAppearance.Material3.HeadlineSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/starwars_rating_text"
                    android:textColor="@color/calification"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/movie_starwars"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/movie_starwars"
                    app:layout_constraintTop_toBottomOf="@+id/movie_starwars" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/movie2_cardView"
            android:layout_width="0dp"
            android:layout_height="125dp"
            android:layout_marginStart="@dimen/medium_gap"
            android:layout_marginTop="@dimen/small_gap"
            android:layout_marginEnd="@dimen/medium_gap"
            android:layout_marginBottom="377dp"
            android:backgroundTint="@color/cardLayout"
            app:cardCornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie1_cardView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/harryPotter_imageView"
                    android:layout_width="@dimen/image_width"
                    android:layout_height="@dimen/image_height"
                    android:layout_marginStart="@dimen/small_gap"
                    android:layout_marginTop="@dimen/medium_gap"
                    android:layout_marginBottom="@dimen/medium_gap"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/starwars_contentDesc"
                    android:scaleType="centerCrop"
                    android:src="@drawable/harry_potter"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/movie_harryPotter"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/movie_harryPotter"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="@dimen/small_gap"
                    android:text="@string/harryPotter_Text"
                    android:textColor="@color/white"
                    android:textSize="@dimen/MovieTitle_Size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/harryPotter_imageView"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/harryPotter_rating"
                    style="@style/TextAppearance.Material3.HeadlineSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/harryPotter_rating"
                    android:textColor="@color/calification"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/movie_harryPotter"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/movie_harryPotter"
                    app:layout_constraintTop_toBottomOf="@+id/movie_harryPotter" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/coordinatorLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/AddMovie_Action"
                style="floating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:layout_margin="16dp"
                android:backgroundTint="@color/buttonColor"
                android:contentDescription="Add Movie"
                app:srcCompat="@drawable/ic_plus_24" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>